--- a/服务器框架.md
+++ b/服务器框架.md
@@ -13,13 +13,13 @@
 - lib 库的输出路径
 - Makefile
 - src 源码文件夹
-- test 测试代码文件夹
+- tests 测试代码文件夹
 
 ## 日志系统
 
 #### log4j
 - Logger(定义日志类别)
-- Formatter（日志格式）
+    - Formatter（日志格式）
 - Appender (日志输出地方)
 
 
